--- a/Website.html
+++ b/Website.html
@@ -6,52 +6,75 @@ Project Deadline: October 1st, 2017-->
     <head>
         <title>Project SnakeHunt</title>
     </head>
-    <body bgcolor="0000FF">
-        <p><b>Project Snake-Hunt</b></p>
+    <body bgcolor="000000">
+        <p><b><font color="FFFFFF">Project Snake-Hunt</font></b></p>
         <img src="http://pre04.deviantart.net/f71f/th/pre/i/2014/008/1/b/magi__sinbad_x_baal_by_pink_bang-d71gihy.png" alt="Failed to load image." width="50%" height="50%">
-        <p>Random picture set. (super big, so I resized it 50/50.)<br/></p>
+        <p><font color="FFFFFF">
+            Welcome to the Fractured Legends official website!<br/>
+            We're glad you noticed us!
+            </font><br/></p>
+        <p><font color="FFFFFF">
+            "put something here."
+        </font></p>
         <table border="2" bgcolor="0FFFFF">
-            <tr>Contributors to this project:</tr>
+            <tr><h3><font color="FFFFFF">Event Schedule:</font></h3></tr>
                 <td>
-                    Dexall
+                    Standard Tournaments
                 </td>
                 <td>
-                    Project Host
+                  <!-- once a week. what day? -->
+                    Every other Saturday <br/> @7:00 P.M. (EST)
                 </td>
                 <td>
                     <p>
-                        Main goal is to find a way to integrate Python into html. Best bet is Javascript.
+                       Current games with a tournament:<br/><hr/>
+                       <ul>
+                          <li>Elsword</li>
+                       </ul>
                     </p>
                 </td>
             <tr>
                 <td>
-                    Nico
+                    Extreme Tournaments
                 </td>
                 <td>
-                    HTML Specialist
+                    The 1st of each month <br/> @5:00 P.M. (EST)
                 </td>
                 <td>
                     <p>
-                        My kouhai, who will be in charge of making the website pretty.
+                        Current games with a tournament: <br/> <hr>
+                        <ul>
+                            <li>N/A</li>
+                        </ul>
                     </p>
                 </td>
             </tr>
             <tr>
                 <td>
-                    Fractured Legends
+                    Movie/Show Day
                 </td>
                 <td>
-                    Discord Server
+                   Every Sunday <br/> @12:00 P.M. to 9:00 P.M. (EST)
                 </td>
                 <td>
                     <p>
-                        They offer this project lots of moral support <3
+                       Movie/Show votes are from Wednesday to Friday.
+                    </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Game night
+                </td>
+                <td>
+                    Every Friday <br/> @5:00 P.M. to 11:0 P.M. (EST)
+                </td>
+                <td>
+                    <p>
+                        Game votes are from, Monday to Thursday.
                     </p>
                 </td>
             </tr>
         </table>
-        <script>
-            alert("welcome to this experimental project! The deadline of this project is October 1st, 2017.")
-        </script>
     </body>
 </html>
