--- a/Website.html
+++ b/Website.html
@@ -16,7 +16,7 @@ Project Deadline: October 1st, 2017-->
         <p><font color="FFFFFF">
             "put something here."
         </font></p>
-        <table border="2" bgcolor="0FFFFF">
+        <table border="5" bgcolor="0FFFFF">
             <tr><h3><font color="FFFFFF">Event Schedule:</font></h3></tr>
                 <td>
                     Standard Tournaments
@@ -27,7 +27,7 @@ Project Deadline: October 1st, 2017-->
                 </td>
                 <td>
                     <p>
-                       Current games with a tournament:<br/><hr/>
+                       <b>Current games with a tournament:</b><br/><hr/>
                        <ul>
                           <li>Elsword</li>
                        </ul>
@@ -42,7 +42,7 @@ Project Deadline: October 1st, 2017-->
                 </td>
                 <td>
                     <p>
-                        Current games with a tournament: <br/> <hr>
+                        <b>Current games with a tournament:</b> <br/> <hr>
                         <ul>
                             <li>N/A</li>
                         </ul>
@@ -73,6 +73,23 @@ Project Deadline: October 1st, 2017-->
                     <p>
                         Game votes are from, Monday to Thursday.
                     </p>
+                </td>
+            </tr>
+        </table>
+        <table bgcolor="C00FFF" border="5">
+            <tr><h3><font color="FFFFFF">Standard Tournament Rules:</font></h3>
+                <td>
+                    Elsword
+                </td>
+                <td>
+                    <ul>
+                        <li>Sparring gear only.</li>
+                        <li>No costumes.</li>
+                        <li>Socketing Limited to S rank and below (Only Sparring stones).</li>
+                        <li>Must be in a 2v2 Team Death Match, where 2 members are spectators.</li>
+                        <li>Time limit must be 400.</li>
+                        <li>Set match to Power mode (No Items).</li>
+                    </ul>
                 </td>
             </tr>
         </table>
