--- a/Website.html
+++ b/Website.html
@@ -4,10 +4,10 @@
 
 Project Deadline: October 1st, 2017-->
     <head>
-        <title>Project SnakeHunt</title>
+        <title>Fractured Legends</title>
     </head>
     <body bgcolor="000000">
-        <p><b><font color="FFFFFF">Project Snake-Hunt</font></b></p>
+        <p align="center"><b><font color="FFFFFF"><h1>Fractured Website</h1></font></b></p>
         <img src="http://pre04.deviantart.net/f71f/th/pre/i/2014/008/1/b/magi__sinbad_x_baal_by_pink_bang-d71gihy.png" alt="Failed to load image." width="50%" height="50%">
         <p><font color="FFFFFF">
             Welcome to the Fractured Legends official website!<br/>
