--- a/Website.html
+++ b/Website.html
@@ -4,10 +4,10 @@
 
 Project Deadline: October 1st, 2017-->
     <head>
-        <title>Fractured Legends</title>
+        <title>Project SnakeHunt</title>
     </head>
     <body bgcolor="000000">
-        <p><b><font color="FFFFFF"><h1>Fractured Website</h1></font></b></p>
+        <p><b><font color="FFFFFF">Project Snake-Hunt</font></b></p>
         <img src="http://pre04.deviantart.net/f71f/th/pre/i/2014/008/1/b/magi__sinbad_x_baal_by_pink_bang-d71gihy.png" alt="Failed to load image." width="50%" height="50%">
         <p><font color="FFFFFF">
             Welcome to the Fractured Legends official website!<br/>
@@ -86,9 +86,26 @@ Project Deadline: October 1st, 2017-->
                         <li>Sparring gear only.</li>
                         <li>No costumes.</li>
                         <li>Socketing Limited to S rank and below (Only Sparring stones).</li>
-                        <li>Must be in a 2v2 Team Death Match, where 2 members are spectators.</li>
+                        <li>Must be in a 2v2 Team Match, where 2 members are spectators.</li>
                         <li>Time limit must be 400.</li>
                         <li>Set match to Power mode (No Items).</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table bgcolor="FF0000" border="5">
+            <tr>
+                <p><font color="FFFFFF"><h3>Extreme Tournament Rules</h3></font></p>
+                <td>
+                    Elsword
+                </td>
+                <td>
+                    <ul>
+                        <li>Any gear is allowed.</li>
+                        <li>any sockets are allowed.</li>
+                        <li>Must be in a 2v2 Team Match, where 2 members are spectators.</li>
+                        <li>Time limit is 400.</li>
+                        <li>set match to Items mmode.</li>
                     </ul>
                 </td>
             </tr>
