--- a/Website.html
+++ b/Website.html
@@ -105,7 +105,7 @@ Project Deadline: October 1st, 2017-->
                         <li>any sockets are allowed.</li>
                         <li>Must be in a 2v2 Team Match, where 2 members are spectators.</li>
                         <li>Time limit is 400.</li>
-                        <li>set match to Items mmode.</li>
+                        <li>set match to Items mode.</li>
                     </ul>
                 </td>
             </tr>
